# highflyers-gcs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  wytyczne_tworzenia_kodu.tex
docs/reports/: HF_GCS_1_2013_MK.tex
src/: .gitignore  CMakeLists.txt  main.cpp
src/apconfig/: .gitignore  CMakeLists.txt  ap_code_generator.pl  autopilot.hfdesc
src/apconfig/include/: apconfig.h
src/apconfig/include/apconfig/widgets/: PIDConfigurator.h
src/apconfig/include/widgets/: PIDConfigurator.h
src/apconfig/widgets/: PIDConfigurator.cpp
src/base_data_player/: BaseDataPlayer.cpp  BaseDataPlayerBuilder.cpp  CMakeLists.txt
src/base_data_player/include/: base_data_player.h
src/base_data_player/include/base_data_player/: BaseDataPlayer.h
src/communication/: CMakeLists.txt  SerialPort.cpp
src/communication/include/communication/: SerialPort.h  SerialPortObserver.h  communication.h
src/core/: .gitignore  CMakeLists.txt  CoreController.cpp  DataMaster.cpp  Image.cpp  Logger.cpp  PluginLoader.cpp  PluginSetLoader.cpp
src/core/include/: core.h
src/core/include/core/: CoreController.h  DataMaster.h  IObservable.h  Image.h  Logger.h  PluginInterface.h  PluginLoader.h  PluginObserver.h  PluginSetLoader.h  Singleton.h  plugin_interfaces.h
src/core/include/core/logger/: Logger.hpp  MultiOutPolicy.h
src/core/include/core/plugin_interfaces/: ICommunicationPlugin.h  IPlugin.h  IProtocol.h  ITelemetryControlsPlugin.h  IVideoSourcePlugin.h
src/core/logger/: MultiOutPolicy.cpp
src/fake_comm/: CMakeLists.txt  FakeComm.cpp  FakeCommBuilder.cpp
src/fake_comm/include/: fake_comm.h
src/fake_comm/include/fake_comm/: FakeComm.h
src/gui/: CMakeLists.txt  ColorDockWidget.cpp  ColorWidget.cpp  CommunicationWidget.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  VideoPlayer.cpp
src/gui/include/: gui.h
src/gui/include/gui/: ColorDockWidget.h  ColorWidget.h  CommunicationWidget.h  MainWindow.h  VideoPlayer.h
src/gui/ui_files/: CommunicationWidget.ui  MainWindow.ui
src/mcms_telemetry/: CMakeLists.txt  McmsTelemetry.cpp  McmsTelemetryBuilder.cpp  McmsTelemetryWidget.cpp
src/mcms_telemetry/include/: mcms_telemetry.h
src/mcms_telemetry/include/mcms_telemetry/: McmsTelemetry.h  McmsTelemetryWidget.h
src/mcms_telemetry/ui_files/: McmsTelemetry.ui
src/protocol/: CMakeLists.txt  Protocol.cpp
src/protocol/c_protocol/: CMakeLists.txt  GCSData.pb.c  GCSData.proto  c_protocol.c  crc16.c
src/protocol/c_protocol/include/: GCSData.pb.h  c_protocol.h  crc16.h
src/protocol/c_protocol/nanopb/: CMakeLists.txt
src/protocol/include/: Protocol.hpp
src/telemetry_controls/: Battery.cpp  Battery.ui  CMakeLists.txt  battery.cpp  battery.ui
src/telemetry_controls/include/: battery.h
src/telemetry_controls/include/telemetry_controls/: Battery.h
src/video_streamer/: CMakeLists.txt  VideoStreamer.cpp
src/video_streamer/client/: CMakeLists.txt  RtpClient.cpp  RtpClientBuilder.cpp
src/video_streamer/client/include/: RtpClient.h
src/video_streamer/include/: video_streamer.h
src/video_streamer/include/video_streamer/: DebugInfo.h  IVSObserver.h  VideoStreamer.h  client.h  server.h
src/video_streamer/include/video_streamer/client/: RtpClient.h
src/video_streamer/include/video_streamer/server/: RtpServer.h
src/video_streamer/server/: CMakeLists.txt  RtpServer.cpp  RtpServerBuilder.cpp
src/video_streamer/server/include/: RtpServer.h
src/video_test_src/: CMakeLists.txt  VideoTestSrc.cpp  VideoTestSrcBuilder.cpp
src/video_test_src/include/: video_test_src.h
src/video_test_src/include/video_test_src/: VideoTestSrc.h
test/: CMakeLists.txt  UTmain.cpp
test/core/: CMakeLists.txt  DataMaster.cpp  IObservable.cpp
test/protocol/: CMakeLists.txt  Protocol.cpp
test/telemetry_controls/: Battery.cpp  Battery.cpp~  CMakeLists.txt
tools/: CMakeLists.txt
tools/streamer/: CMakeLists.txt  streamer.cpp
